--- a/client/templates/bio.html
+++ b/client/templates/bio.html
@@ -11,9 +11,9 @@
 		</div>
 		<div class="column is-hidden-tablet" style="margin-top: 15px">
 			<img id="profilepic" src="client/images/profile2.jpg" style="height: 300px; margin-bottom: 5px">
-			<a href="https://github.com/Mholliday6611"><img class="logos" src="client/images/git.png" style="height: 50px"></a>
-			<a href="https://www.linkedin.com/in/malcolm-holliday/"><img class="logos" src="client/images/link.png" style="height: 50px"></a>
-			<a href="mailto:Mholliday6611@gmail.com"><img class="logos" src="client/images/mail.png" style="height: 50px"></a>
+			<a href="https://github.com/Mholliday6611"><img class="logos" src="client/images/git.png" style="height: 50px; margin-left: 80px;"></a>
+			<a href="https://www.linkedin.com/in/malcolm-holliday/"><img class="logos" src="client/images/link.png" style="height: 50px; margin-left: 80px;"></a>
+			<a href="mailto:Mholliday6611@gmail.com"><img class="logos" src="client/images/mail.png" style="height: 50px;margin-left: 80px;"></a>
 		</div>
 		<div class="column">
 			<div class="card" style="margin-bottom: 25px">
