--- a/client/templates/bio.html
+++ b/client/templates/bio.html
@@ -1,5 +1,5 @@
 <div class="hero">
-	<h1 class="title" style="margin-left: 30px">Junior Full-Stack Developer</h1>
+	<h1 class="title" style="margin-left: 30px">Full-Stack Developer</h1>
 </div>
 <div>
 	<div class="columns" id="biog">
